# Atmega328p

./: CMakeLists.txt  README.md  Source_CMake.txt
base/: CMakeLists.txt
base/src/: buttons.cpp  buttonsets.h  clock.cpp  eeprom.cpp  lcd.cpp  lcd.h  main.cpp  menusettings.cpp  micromenu.h  timer1.cpp  timer1.h  twi2c.cpp
blick/: CMakeLists.txt
blick/src/: main.cpp
button/: CMakeLists.txt
button/src/: clock.cpp  lcd.cpp  main.cpp  settings.cpp  settings.h
charmenu/: CMakeLists.txt
charmenu/backup/: CharMenu.h
charmenu/src/: CharMenu.h  buttons.cpp  buttonsets.h  clock.h  lcd.cpp  lcd.h  lcd_lib.h  lcdpins.h  main.cpp  menu.cpp  menusettings.cpp  micromenu.h  twi_timer.cpp
clock/: CMakeLists.txt
clock/src/: clock.cpp  clock.h  lcd.cpp  main.cpp  pins.h  timer0_hal.cpp  twi_timer.cpp  twi_timer.h
clock2/src/: clock.cpp  clock.h  lcd.h  main.cpp  twi2c.cpp  twi2c.h  twi_master.cpp  twi_master.h
dac/: CMakeLists.txt
dac/src/: buttons.cpp  clock.cpp  clock.h  eeprom.cpp  eeprom.h  i2cmaster.cpp  i2cmaster.h  lcd.cpp  lcd.h  main.cpp  mcp4725.cpp  mcp4725.h  menusettings.cpp  micromenu.h  test.h  timer1.cpp  twi2c.cpp
eeprom/: CMakeLists.txt
eeprom/src/: eeprom.cpp  eeprom.h  main.cpp
lcd/: CMakeLists.txt
lcd/src/: lcd.cpp  lcd.h  main.cpp  pins.h
menu/: CMakeLists.txt
menu/src/: lcd.cpp  main.cpp  pins.h  settings.h  timer0_hal.h
scanner/: CMakeLists.txt
scanner/src/: lcd.cpp  lcd.h  main.cpp
src/: main.cpp
